# svgthing

./: .gitignore  Cargo.toml
src/: bounds.rs  cli.rs  main.rs  map_colors.rs  parser.rs  render.rs
