[package]
name = "svgthing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9", features = ["derive", "dull-color"] }
nom = "7"
resvg = "0.40.0"
shell-words = "1.1.0"
thiserror = "1.0"
